--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_OasisMilk_D.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_OasisMilk_D.yml
@@ -149,7 +149,7 @@ talk1026: |
   <3 Type='0' Data='0b00'/><4 Type='0' Data='0c004e006f007400690063006500'/>Nothing? <5 Type='0'/>Nothing at all? <5 Type='0'/>Hm.
   
   
-  <3 Type='0' Data='0000'/><4 Type='0' Data='0a005400680069006e006b00'/>With how rare it is for a voe to be allowed
+  <3 Type='0' Data='0000'/><4 Type='0' Data='0a005400680069006e006b00'/>With how rare it is for a outsider to be allowed
   in town, I thought I could practice my
   invitation to hang out on you.
   I have to be ready for when I meet my
@@ -169,7 +169,7 @@ talk1011: |
   <3 Type='0' Data='0000'/><4 Type='0' Data='0a005400680069006e006b00'/>Oh, sorry. I'm just practicing my invitation
   to hang out.
   
-  As long as you, a voe, are in town,
+  As long as you, a outsider, are in town,
   I figured I could practice for when I
   meet my true love.
   <3 Type='0' Data='0a00'/>You hardly reacted though. <5 Type='0'/>I guess it
