--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_OasisMilk_E.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_OasisMilk_E.yml
@@ -17,7 +17,7 @@ talk0014: |
   gulp down another one?
 talk0015: |
   <3 Type='0' Data='0800'/><4 Type='0' Data='0c004c0061007500670068005300'/>I'm surprised to be serving drinks to a
-  voe... But I should embrace new things,
+  outsider... But I should embrace new things,
   shouldn't I? A true "Noble Pursuit"!
 0000: |
   A drink, please!
