--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis036.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis036.yml
@@ -158,7 +158,7 @@ talk0005: |
   of the sand shroud, you can rest in one of
   the houses on the surface.
 talk0018: |
-  <3 Type='0' Data='0700'/>You're the voe everyone's been talking
+  <3 Type='0' Data='0700'/>You're the vai everyone's been talking
   about, aren't you?<5 Type='0'/>
   
   Lady Riju let us know that you have her
@@ -166,7 +166,7 @@ talk0018: |
   
   <3 Type='0' Data='0701'/>You're even allowed to visit the shops and
   use things in town.<5 Type='0'/> You must quite the
-  special voe...
+  special vai...
 Talk_PreChallenge04: |
   <3 Type='0' Data='0700'/>Just past here is the Gerudo <0 Type='3' Data='0000'/>shelter<0 Type='3' Data='ffff'/>.
   
