--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZO_0003.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZO_0003.yml
@@ -53,7 +53,7 @@ Dm_ZO_0003_38: |
   to see you.
 Dm_ZO_0003_29: |
   <3 Type='0' Data='0101'/><4 Type='0' Data='1000480061007000700079005f0030003100'/>It is simply wonderful, is it not?! How I
-  would love to meet him some day...
+  would love to meet her some day...
 Dm_ZO_0003_39: |
   <3 Type='0' Data='0101'/><4 Type='0' Data='0e0045006100730065005f0030003000'/>Sidon can be found at <0 Type='3' Data='0000'/>Mipha Court<0 Type='3' Data='ffff'/>,
   located<0 Type='3' Data='0000'/> <0 Type='3' Data='ffff'/>at the peak of Ploymus Mountain.
