--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_SouthernVillage015.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_SouthernVillage015.yml
@@ -50,7 +50,7 @@ talk0001: |
   haven't found you. Normally they're pretty
   good at catching intruders...
   Usually when a outsider tries to sneak into
-  town, he's quickly caught by the guards
+  town, she's quickly caught by the guards
   and thrown into <0 Type='3' Data='0000'/>jail<0 Type='3' Data='ffff'/>.
   <3 Type='0' Data='0701'/><4 Type='0' Data='0e0045006100730065005f0030003000'/>I won't turn you in, of course, but once
   you're done shopping, you should get out
