--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Tribune10.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Tribune10.yml
@@ -34,7 +34,7 @@ Talk64: |
   and take the byline. And who knows?
   Maybe there's a real story buried here.
 Talk47: |
-  <3 Type='0' Data='0701'/><4 Type='0' Data='100041006e006700720079005f0030003000'/><FontSize Value='125'/>Get him! And finish the job!<FontSize Value='100'/>
+  <3 Type='0' Data='0701'/><4 Type='0' Data='100041006e006700720079005f0030003000'/><FontSize Value='125'/>Get her! And finish the job!<FontSize Value='100'/>
 Talk48: |
   <3 Type='0' Data='0700'/><4 Type='0' Data='10004700720065006500740069006e006700'/>Hey! Look at you, partner! Coming all
   the way out here to track down leads.
