--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Junior_001.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Junior_001.yml
@@ -1,6 +1,6 @@
 Talk_000: |
-  <3 Type='0' Data='0900'/>Argh! That wretched Linkette! Not only did
-  he break into our branches, but he set all
+  <3 Type='0' Data='0900'/>Argh! That wretched Rinkuru! Not only did
+  she break into our branches, but she set all
   our tailors free!
   We'd only just kidnapped them too...<0 Type='4'/><3 Type='0' Data='0700'/><4 Type='0' Data='0600530061006400'/>It's the branches' duty to make our
   uniforms. We've gotta fix this before
@@ -9,17 +9,17 @@ Talk_000: |
   seamsters again... They're always walking down
   <0 Type='3' Data='0000'/>roads<0 Type='3' Data='ffff'/> without a care in the world.<FontSize Value='100'/>
 Talk_100: |
-  <3 Type='0' Data='0700'/>Well, if it isn't Linkette!<5 Type='0'/> Huh...<5 Type='0'/> I guess it
-  actually ISN'T Linkette.
+  <3 Type='0' Data='0700'/>Well, if it isn't Rinkuru!<5 Type='0'/> Huh...<5 Type='0'/> I guess it
+  actually ISN'T Rinkuru.
   
   <4 Type='0' Data='08004500610073006500'/>All right.<5 Type='0'/> Get inside.
 Talk_200: |
-  <3 Type='0' Data='0700'/><4 Type='0' Data='0a005400680069006e006b00'/>What is it?<5 Type='1'/> Wait—<5 Type='1'/> YOU!<0 Type='4'/><3 Type='0' Data='0b00'/><4 Type='0' Data='1800530075007200700072006900730065004c005f0030003100'/>It's Linkette! <5 Type='1'/>Get ready for battle!<1 Type='3' Data='5a000000'/>
+  <3 Type='0' Data='0700'/><4 Type='0' Data='0a005400680069006e006b00'/>What is it?<5 Type='1'/> Wait—<5 Type='1'/> YOU!<0 Type='4'/><3 Type='0' Data='0b00'/><4 Type='0' Data='1800530075007200700072006900730065004c005f0030003100'/>It's Rinkuru! <5 Type='1'/>Get ready for battle!<1 Type='3' Data='5a000000'/>
 Talk_001: |
   <3 Type='0' Data='0a00'/>It's the branches' duty to make our
   uniforms, so we have to get those tailors
   back before Master Kohga finds out.
-  That blasted Linkette.<5 Type='0'/> We're busy enough
+  That blasted Rinkuru.<5 Type='0'/> We're busy enough
   without having to rekidnap people!
   
   <3 Type='0' Data='0900'/><4 Type='0' Data='1800540061006c006b0050006f00730069007400690076006500'/>Listen, you. If you see anybody in flashy
@@ -31,14 +31,14 @@ Talk_002: |
   <3 Type='0' Data='0a00'/>It's the branches' duty to make our
   uniforms, so we have to get those tailors
   back before Master Kohga finds out.
-  Though...<5 Type='1'/>I guess Master Kohga is gone...<5 Type='2'/><0 Type='4'/><3 Type='0' Data='0900'/><4 Type='0' Data='1800540061006c006b0050006f00730069007400690076006500'/>That blasted Linkette!<5 Type='0'/> Could he make any
+  Though...<5 Type='1'/>I guess Master Kohga is gone...<5 Type='2'/><0 Type='4'/><3 Type='0' Data='0900'/><4 Type='0' Data='1800540061006c006b0050006f00730069007400690076006500'/>That blasted Rinkuru!<5 Type='0'/> Could she make any
   more trouble for us?!<0 Type='4'/>Listen, you. If you see anybody in flashy
   clothes, you grab them and bring them
   back here!<0 Type='4'/>You can find them walking the<0 Type='3' Data='0000'/> roads<0 Type='3' Data='ffff'/>
   outside. Tailors love roads.
 Talk_000_2: |
-  <3 Type='0' Data='0900'/>Argh! That wretched Linkette! Not only did
-  he break into our branches, but he set
+  <3 Type='0' Data='0900'/>Argh! That wretched Rinkuru! Not only did
+  she break into our branches, but she set
   all our tailors free!
   We'd only just kidnapped them too...<0 Type='4'/><3 Type='0' Data='0701'/><4 Type='0' Data='0600530061006400'/>It's the branches' duty to make our
   uniforms. We have to do something
@@ -50,8 +50,8 @@ Talk_001_2: |
   <3 Type='0' Data='0a00'/>Outfit making is the branches' duty.
   That's why we have to get our tailors
   back before Master Kohga finds out!
-  That accursed Linkette! <5 Type='0'/>We're busy enough
-  without his meddling.<0 Type='4'/><3 Type='0' Data='0700'/>Blademaster, if you see anyone dressed
+  That accursed Rinkuru! <5 Type='0'/>We're busy enough
+  without her meddling.<0 Type='4'/><3 Type='0' Data='0700'/>Blademaster, if you see anyone dressed
   in flashy clothes, please let me know, and
   I'll capture them.
   You can often find them walking the<0 Type='3' Data='0000'/> roads<0 Type='3' Data='ffff'/>
@@ -60,7 +60,7 @@ Talk_002_2: |
   <3 Type='0' Data='0a00'/>Outfit making is the branches' duty.
   That's why we have to get our tailors
   back before Master Kohga finds out!
-  Though...<5 Type='1'/>I suppose Master Kohga is gone.<5 Type='2'/><0 Type='4'/>That accursed Linkette! <5 Type='0'/>It's as if he lives to
+  Though...<5 Type='1'/>I suppose Master Kohga is gone.<5 Type='2'/><0 Type='4'/>That accursed Rinkuru! <5 Type='0'/>It's as if she lives to
   cause us trouble!<0 Type='4'/><3 Type='0' Data='0700'/>Blademaster, if you see anyone dressed
   in flashy clothes, please let me know, and
   I'll capture them.
