--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_HatenoVillage008.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_HatenoVillage008.yml
@@ -16,7 +16,7 @@ Near_0005: |
 Talk_22: |
   <3 Type='0' Data='0101'/>We're spies for A-Zoom! <5 Type='0'/>He's a hero who
   protects our village.<0 Type='4'/><3 Type='0' Data='0c01'/>I'm, ummm, spy number one, and my little
-  sister, Narah, is spy number two.<5 Type='0'/><0 Type='4'/><3 Type='0' Data='0801'/><4 Type='0' Data='12004c0061007500670068004c005f0030003000'/>That makes you spy number three, mister!
+  sister, Narah, is spy number two.<5 Type='0'/><0 Type='4'/><3 Type='0' Data='0801'/><4 Type='0' Data='12004c0061007500670068004c005f0030003000'/>That makes you spy number three, ma'am!
 Near_0006: |
   So this is school.
 Talk_10: |
