--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Obj_DiaryAssassin_A_01.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Obj_DiaryAssassin_A_01.yml
@@ -15,7 +15,7 @@ Talk_001: |
   Though we haven't yet received any word
   of Zelda, there have been many reported
   sightings of her knight, Rinkuru.
-  His days are numbered, though, as the
+  Her days are numbered, though, as the
   surface division is setting up a network
   of their terrifying banana traps.
   I'm embarrassed to say I've fallen for one
