--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GE_0025.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GE_0025.yml
@@ -68,7 +68,7 @@ Dm_GE_0025_Text_011_b: |
   the Demon King... To seal him away.
 Dm_GE_0025_Text_024_b: |
   The Gerudo sage and her people will fight alongside
-  your swordsman.
+  your swordmaster.
 Dm_GE_0025_Text_000_b: |
   Long, long ago...when the kingdom of Hyrule was
   still young...
