--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Fairy3.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Fairy3.yml
@@ -32,7 +32,7 @@ Talk0016: |
 Talk1002: |
   <3 Type='0' Data='0a00'/>The <0 Type='3' Data='0000'/>Great Fairy<0 Type='3' Data='ffff'/> is over there.
 Talk0017: |
-  <3 Type='0' Data='0800'/>Ah, there's the man of the hour! Look at
+  <3 Type='0' Data='0800'/>Ah, there's the Lady of the hour! Look at
   this—<5 Type='0'/>or rather, listen!<0 Type='4'/>It's Beetz! <5 Type='0'/>Our stalwart drummer, Beetz,
   has returned!
 Talk1003: |
