--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/HyruleCastleIncident.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/HyruleCastleIncident.yml
@@ -179,7 +179,7 @@ talk_HighMountain009_04: |
   But we have a responsibility to this place.
   We have to stay here and protect it.
   
-  <3 Type='0' Data='0800'/>So go on and be the amazing swordsman
+  <3 Type='0' Data='0800'/>So go on and be the amazing swordmaster
   we all love! Just don't get too carried
   away, huh?
 talk_ZoraFencer_20: |
