--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Junior_Azito005.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Junior_Azito005.yml
@@ -94,7 +94,7 @@ Com_Talk_05c: |
   <3 Type='0' Data='0701'/>Show me the good stuff.
 Talk_00: |
   <3 Type='0' Data='0701'/>You may be young, but you know quality.
-  A true banana man, I see.
+  A true banana connoisseur, I see.
 Com_Talk_54: |
   <3 Type='0' Data='0900'/>You wanna pay with your life? No?
   Then come back with money.
