--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Junior_Azito009.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Junior_Azito009.yml
@@ -11,7 +11,7 @@ Talk_03: |
   We still don't have enough supplies for
   our <0 Type='3' Data='0000'/>bases in the Depths<0 Type='3' Data='ffff'/>!
 Talk_01: |
-  <3 Type='0' Data='0700'/><4 Type='0' Data='0a005400680069006e006b00'/>That Linkette jerk wreaked havoc at the
+  <3 Type='0' Data='0700'/><4 Type='0' Data='0a005400680069006e006b00'/>That Rinkuru jerk wreaked havoc at the
   branches and interrupted our supply of
   food and materials.
   Meanwhile, the folks down in the Depths
@@ -27,8 +27,8 @@ Talk_04: |
   That's why I'm gonna do everything I can
   to protect the Yiga Clan until he's back!
 Talk_02: |
-  <3 Type='0' Data='0200'/><4 Type='0' Data='0a0041006e00670072007900'/>If not for that Linkette jerk, we wouldn't be
+  <3 Type='0' Data='0200'/><4 Type='0' Data='0a0041006e00670072007900'/>If not for that Rinkuru jerk, we wouldn't be
   stuck doing this work!
   
-  I swear, if I ever see the guy, I'm gonna
-  wring his neck!
+  I swear, if I ever see that lady, I'm gonna
+  wring her neck!
