--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Middle_002.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Middle_002.yml
@@ -71,7 +71,7 @@ Talk_202: |
   to fall into enemy hands.
 Talk_002: |
   <3 Type='0' Data='0b00'/>WHOA! You can't just let info that slip to
-  some guy we don't even know!
+  some lady we don't even know!
   
   Listen, those tailors are always wandering
   the <0 Type='3' Data='0000'/>roads <0 Type='3' Data='ffff'/>without a care in the world. If
