--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Middle_Azito003.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Middle_Azito003.yml
@@ -68,7 +68,7 @@ ThunderHelmet_00: |
   Whoa. The Lightning Helm!
 Talk_00: |
   <3 Type='0' Data='0700'/>That brand-new gear... I take it you're
-  the new guy?
+  the new lady?
   
   You're lucky to even be alive with our
   archnemesis Rinkuru out there scheming
