--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_NewsPaper001.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_NewsPaper001.yml
@@ -400,7 +400,7 @@ Talk3007: |
   ever work out?
   And of all people, did they really think
   they could trick someone like Princess
-  Zelda's faithful swordsman, Rinkuru?
+  Zelda's faithful knight, Rinkuru?
 Talk3013: |
   <3 Type='0' Data='0700'/>What's this? It's not an article...<0 Type='4'/>"Princess Zelda, We Will Never Give Up."<0 Type='4'/>Ah, I see. It's a kind of declaration!<0 Type='4'/>"The Lucky Clover Gazette has diligently
   investigated many stories related to
