--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Road_015.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Road_015.yml
@@ -56,7 +56,7 @@ StartPoint_04: |
   Between the pirate attack and recovering
   from the pirate attack, things were a
   little rocky over there for a while.
-  <3 Type='0' Data='0100'/><4 Type='0' Data='1000480061007000700079005f0030003100'/>But thanks to some guy everyone's calling
+  <3 Type='0' Data='0100'/><4 Type='0' Data='1000480061007000700079005f0030003100'/>But thanks to some lady everyone's calling
   "the savior of the village," the place is
   happier and more peaceful than ever.
   <4 Type='0' Data='0c004c0061007500670068005300'/>Now I can catch and sell fish here in
