--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_goron001.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_goron001.yml
@@ -69,7 +69,7 @@ talk19: |
   Hope the massage was nice.<5 Type='0'/> Best of luck
   out there.
 Talk_15: |
-  <3 Type='0' Data='0100'/><4 Type='0' Data='10004700720065006500740069006e006700'/>Oh, hey! You're the guy who showed me
+  <3 Type='0' Data='0100'/><4 Type='0' Data='10004700720065006500740069006e006700'/>Oh, hey! You're the lady who showed me
   that picture of the moon in daylight!
 0009: |
   A massage?
