--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/SecretBase_MiniGame.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/SecretBase_MiniGame.yml
@@ -106,7 +106,7 @@ Talk_00: |
   its spirit, <5 Type='0'/>which gives us the perfect
   opportunity to bring it to its knees.
   <4 Type='0' Data='0a005400680069006e006b00'/>The only problem is her stubborn little
-  "appointed swordsman," Rinkuru. We've
+  "appointed knight," Rinkuru. We've
   received reports that she still lives.
   I hate to admit it, but she's a formidable
   foe. <5 Type='0'/>We'll all need to hone our skills if
@@ -181,7 +181,7 @@ Talk_33: |
   is said and done.
 Talk_05: |
   <3 Type='0' Data='0700'/><4 Type='0' Data='0a0041006e00670072007900'/>You'll never beat that accursed
-  swordsman without training!
+  swordmaster without training!
 Talk_06: |
   <3 Type='0' Data='0700'/>We train by sparring with our fellow Yiga.<5 Type='0'/>
   We set a timer, and the combatants just
@@ -264,7 +264,7 @@ Talk_11: |
   <3 Type='0' Data='0700'/><4 Type='0' Data='12004c00610075006700680053005f0030003000'/>Not that anyone's ever been able to do
   THAT, of course.
 Talk_41: |
-  <3 Type='0' Data='0700'/><4 Type='0' Data='0a0041006e00670072007900'/>Attack the newcomer as if he were
+  <3 Type='0' Data='0700'/><4 Type='0' Data='0a0041006e00670072007900'/>Attack the newcomer as if she were
   Rinkuru himself! For Master Kohga!
 Talk_12: |
   <3 Type='0' Data='0700'/><4 Type='0' Data='0a0041006e00670072007900'/>Where are you going, you fool?! <5 Type='1'/>You're
