--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Tribune07.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Tribune07.yml
@@ -160,7 +160,7 @@ Talk1019: |
   <3 Type='0' Data='0c01'/>I heard they were good at disguising
   themselves,<5 Type='0'/> but playing the part of a
   villager? I never would have guessed.
-  And all to flush out the swordsman who
+  And all to flush out the swordmaster who
   protects the princess...
 Talk1043: |
   <3 Type='0' Data='0700'/><4 Type='0' Data='10004700720065006500740069006e006700'/>Hello, partner! You here to investigate
