--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GO_0021.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GO_0021.yml
@@ -54,7 +54,7 @@ Dm_GO_0021_Text_033_c: |
   When that time comes, a noble knight named
   Rinkuru will oppose him.
 Dm_GO_0021_Text_034_c: |
-  But Rinkuru will need help. Lend him your power...
+  But Rinkuru will need help. Lend her your power...
   Your fire... The Goron's mastery of fire!
 Dm_GO_0021_Text_036_c: |
   I'd like nothing more than to smash the
