--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZO_0032.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZO_0032.yml
@@ -53,7 +53,7 @@ Dm_ZO_0032_Text_017_c: |
   When that happens, a noble knight, named Rinkuru,
   will oppose him.
 Dm_ZO_0032_Text_018_c: |
-  We must help. Lend him your power... He will need
+  We must help. Lend her your power... He will need
   the Zora's control over water!
 Dm_ZO_0032_Text_019_c: |
   The course of the Zora's future was clear.
