--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_FaronWoods009.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_FaronWoods009.yml
@@ -239,8 +239,8 @@ Talk_1311: |
   Its stamina must be considerable, given
   the size of that animal!
 Talk_04: |
-  <3 Type='0' Data='0001'/><4 Type='0' Data='0c004c0061007500670068005300'/>He does not!<5 Type='0'/> A quick study of his face
-  gives him away.
+  <3 Type='0' Data='0001'/><4 Type='0' Data='0c004c0061007500670068005300'/>She does not!<5 Type='0'/> A quick study of her face
+  gives her away.
   
   <3 Type='0' Data='0801'/>He's got the <0 Type='3' Data='0000'/>giant white stallion<0 Type='3' Data='ffff'/> on
   his mind, and who could blame him?
