--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Lodge_Chemical001.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Lodge_Chemical001.yml
@@ -11,7 +11,7 @@ Talk_22: |
   <0 Type='3' Data='0000'/>summerwing butterfly<0 Type='3' Data='ffff'/> so we can
   make a <0 Type='3' Data='0000'/>spicy elixir<0 Type='3' Data='ffff'/>?
 Talk_06: |
-  <3 Type='0' Data='0701'/>Hey, you should be sure to thank him
+  <3 Type='0' Data='0701'/>Hey, you should be sure to thank her
   nice 'n' proper like.
 Talk_23: |
   <3 Type='0' Data='0a00'/>Yammo... I... *sigh* Even my heart is
