--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_HatenoVillage006.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_HatenoVillage006.yml
@@ -166,7 +166,7 @@ Talk_33: |
   some basic fashion sense, we might let
   a fellow Cece fan join in our chat.
 Talk_68: |
-  <3 Type='0' Data='0700'/>But don't you see, Nikki? <5 Type='0'/>He's dressed in
+  <3 Type='0' Data='0700'/>But don't you see, Nikki? <5 Type='0'/>She's dressed in
   a <0 Type='3' Data='0000'/>full set of matching clothes<0 Type='3' Data='ffff'/>.<0 Type='4'/>What could be the problem with including
   such a fashionable fellow in our inner
   circle, hmm?
@@ -175,8 +175,8 @@ NakedPlayer: |
 Talk_34: |
   <3 Type='0' Data='0c00'/>Still hideously unfashionable, I see.
 Talk_69: |
-  <3 Type='0' Data='0700'/>But don't you see, Nikki? <5 Type='0'/>He's gone to
-  the trouble to color his outfit with those
+  <3 Type='0' Data='0700'/>But don't you see, Nikki? <5 Type='0'/>She's gone to
+  the trouble to color her outfit with those
   wonderful <0 Type='3' Data='0000'/>Hateno dyes<0 Type='3' Data='ffff'/>.<0 Type='4'/>What could be the problem with including
   such a fashionable fellow in our inner
   circle, hmm?
