--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_HatenoVillage008.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_HatenoVillage008.yml
@@ -31,7 +31,7 @@ Talk_24: |
   <3 Type='0' Data='0900'/><4 Type='0' Data='1200530075007200700072006900730065004c00'/>Is someone there?! Halt, evildoer!<5 Type='1'/>
 Talk_12: |
   <3 Type='0' Data='0301'/>Wait... <5 Type='0'/>How come you don't have
-  a weapon?<0 Type='4'/>What's the point of a traveler if he doesn't
+  a weapon?<0 Type='4'/>What's the point of a traveler if she doesn't
   have a cool weapon to show me?<0 Type='4'/><3 Type='0' Data='0100'/><4 Type='0' Data='12004c00610075006700680053005f0030003100'/>You're boring. But that's OK!
   I can fix that!
 Talk_25: |
